2015-07-31, S3QL 2.14

  * S3QL now longer crashes when the server sends a zero-length
    response that claims to be XML.

  * The default tcp-timeout has been increased from 10 seconds to 20
    seconds.

  * Fixed test failures when FUSE is not available, tests should now
    again be skipped.

  * S3QL now tracks the frequency of server errors and logs warnings
    if they occur more often than 5 times per second over a period of
    at least 60 seconds. Previously, retries would only be logged
    if the same request has been retried more than 3 times.

  * The "s3qlctrl cachesize" command is now working again (previously
    it would appear to succeed, but not actually change the cache
    size).

  * 404 errors when retrying a delete request are now ignored - most
    likely they mean that the server actually received and executed
    the previous try.

  * Fixed an issue with fsck.s3ql crashing when trying to create a
    file with a very long name in /lost+found.

2015-01-31, S3QL 2.13

  * The internal file system revision has changed. File systems
    created with S3QL 2.13 or newer are not compatible with prior S3QL
    versions.

    To update an existing file system to the newest revision, use the
    's3qladm upgrade' command. During the upgrade, all storage objects
    that were created by S3QL 1.1 or earlier will be downloaded and
    re-uploaded. For objects created by S3QL 1.1.2 or later, the
    upgrade will only affect the storage object's metadata (so no
    contents need to be transferred).

  * SECURITY ADVISORY: Previous mkfs.s3ql versions used /dev/urandom
    to generate the master key when creating a new encrypted file
    system. However, /dev/urandom is not guaranteed to provide the
    256-bits of entropy requested by S3QL. This may have allowed an
    attacker to predict parts of the master key in situations where
    little entropy is available (e.g. right after system boot, or if a